# CITesting

./: .travis.yml  CMakeLists.txt  README.MD
libfoo/: CMakeLists.txt
libfoo/src/: ClassA.cpp  ClassA.h  main.cpp
test/: CMakeLists.txt  Formula-test.cpp
